# rzn-browser

./: .env.example  .gitignore  .mailmap  AGENTS.md  AGENTS.workflow-snippet.md  Cargo.toml  LICENSE  Makefile  README.md  install.ps1  install.sh  setup.sh
.cargo/: cargo-audit-baseline-2026-06-11.txt  config.toml
.github/issues/: 101-family-handshake.md  102-navigate-actions.md  103-interact-actions.md  104-dom-hash-utility.md  105-executor-retry-ladder.md
.github/workflows/: ci.yml  extension-e2e.yml  release.yml
bindings/node/: package.json  tsconfig.json
crates/rzn_broker_endpoint/: Cargo.toml
crates/rzn_browser/: Cargo.toml
crates/rzn_browser/src/: asset_download.rs  cloud.rs  fleet_cli.rs  lib.rs  log_buffer.rs  main.rs  mcp_browser.rs  native_runner.rs  result_formatter.rs  run_store.rs  settings.rs  skill_installer.rs  supervisor.rs  supervisor_cloud.rs  supervisor_control.rs  supervisor_fleet.rs  workflow_cache.rs  workflow_catalog.rs  workflow_failure_report.rs  workflow_health.rs  workflow_params.rs  workflow_validator.rs
crates/rzn_browser/src/supervisor_fleet/: tests.rs
crates/rzn_browser/src/workflow_runner/: mod.rs  tests.rs
crates/rzn_browser/tests/: asset_download_test.rs
crates/rzn_browser_worker/: Cargo.toml
crates/rzn_browser_worker/src/: main.rs
crates/rzn_contracts/: Cargo.toml
crates/rzn_contracts/src/: fleet_v1.rs  lib.rs  v1.rs  v2.rs
crates/rzn_contracts/tests/: production_action_taxonomy.rs  roundtrip.rs  supervisor_runtime_matrix.rs  v2_contract.rs
crates/rzn_core/: Cargo.toml  build.rs
crates/rzn_native_host/: Cargo.toml
crates/rzn_native_host/src/: cloud.rs  main.rs
crates/rzn_plan/: Cargo.toml
crates/rzn_plan/examples/: desktop_bridge.rs  test_dom_reduction.rs
crates/rzn_plan/src/: action_error_handler.rs  action_registry.rs  action_surface.rs  anthropic_client.rs  broker_client.rs  cli_client.rs  desktop_session.rs  desktop_tools.rs  dom_analyzer.rs  dom_compression.rs  dom_context.rs  dom_processor.rs  dom_representation.rs  dom_whitelist.rs  dummy_client.rs  element_ref.rs  failure_cache.rs  failure_recovery.rs  gemini_client.rs  groq_client.rs  lib.rs  llm.rs  llm_autonomous.rs  llm_provider.rs  mode_selector.rs  openai_client.rs  orchestrator.rs  plan_sanitizer.rs  policy_gate.rs  prompt_builder.rs  security_prompts.rs  self_healing.rs  telemetry.rs  ui.rs  wait_strategies.rs  workflow_manager.rs
crates/rzn_plan/src/planner/: mod.rs  planner_fsm.rs  policy.rs
crates/rzn_plan/src/prompts/: autonomous.md  dom_aware_system.md  navigator.md  planner.md  validator.md
crates/rzn_plan/src/tool_llm/: llm_client.rs  mod.rs
crates/rzn_plan/tests/: assistant_conversation_workflows_parse_test.rs  dom_integration_test.rs  google_workflows_parse_test.rs  hn_workflows_parse_test.rs  reddit_workflows_parse_test.rs  x_workflows_parse_test.rs
crates/rzn_plugin_devkit/: Cargo.toml
crates/rzn_plugin_devkit/src/: main.rs
crates/rzn_sdk/: Cargo.toml
crates/rzn_sdk/examples/: browser_tools_demo.rs  desktop_bridge_sdk.rs
crates/rzn_sdk/src/: host.rs  lib.rs  native_host.rs  prelude.rs  session.rs  tools.rs  unstable.rs
docs/: 05_LLM_INTEGRATION_AND_PLANNING_SYSTEM.md  ACTIONS_SCHEMA.md  ARCHITECTURE.md  BROWSER_DEV_LOOP.md  CDP_INTEGRATION.md  FLEET_SMOKE.md  IMPLEMENTATION_GUIDE.md  LLM_MODE.md  LLM_PROMPT_PACK.md  LLM_SCOPED_WORKFLOW.md  MULTI_BROWSER_INSTALL.md  README_VISUAL_BRIEFS.md  REPO_MAP.md  WORKFLOW_MODE.md  ads-smoke-lane.md  agent-workflow.md  ai-contribution-policy.md
docs/bugs/: reddit-draft-dm-shadow-dom.md
docs/context/: llm_scope.yml
docs/repo_cleanup_audit/: README.md  delete_now.md  keep_core.md  review_before_delete.md
docs/visuals/: DESIGN_BRIEF.md  UPSTREAM_SKILL_NOTES.md
docs/workflows/: AGENT_PLAYBOOK.md  README.md  validation-2026-05-17.md  workflow-manifest-authoring.md
examples/action_surface/: README.md
examples/browser_automation/: README.md  extract_first_table.json  open_page_get_title.json  packaged_google_search_v2.json  search_google.json
examples/rzn_tool_explainer/: README.md  package-lock.json  package.json
examples/tauri_bridge/: README.md
extension/: build  build.sh  dashboard.html  package.json  playwright.config.ts  popup.html  tsconfig.json  vite.config.background.ts  vite.config.content.ts  vite.config.dashboard.ts  vite.config.pagebridge.ts  vite.config.popup.ts  vite.config.shadow-dom.ts  vitest.config.ts
extension/dist-chrome/: background.js  contentScript.js  manifest.json  pageBridge.js  shadow-dom-instrumentation.js
extension/dist-firefox/: background.js  contentScript.js  manifest.json  pageBridge.js  popup.html
extension/scripts/: generate-types.ts
extension/src/: background.ts  browserInstanceId.test.ts  browserInstanceId.ts  browserTabs.test.ts  browserTabs.ts  buildInfo.test.ts  buildInfo.ts  cdpLeaseDurability.test.ts  cdpLeaseDurability.ts  cloudTransport.test.ts  cloudTransport.ts  content-logger.ts  contentScript.ts  contentTarget.test.ts  contentTarget.ts  domPrune.ts  error-handler.ts  logger.ts  manifest.base.json  manifest.chrome.json  manifest.firefox.json  manifestGeneration.test.ts  pageBridge.ts  popup.css  popup.ts  scriptingEvalBody.test.ts  scriptingEvalBody.ts  scriptingEvalResult.ts  tabNavigation.ts
resources/cards/: README.md
schema/: actions-v1.json  ads-manifest-v1.json  browser-social-profile-v1.json  extraction-plan-v1.json  rzn-actions-complete.json
scripts/: build-ext.ts  check-actions-schema.js  cli_factory_doctor.sh  fleet_smoke.sh  gen-context.sh  gen-invariants.sh  gen-reducers-index.sh  gen-tree.sh  install_rzn_workflow_builder_skill.sh  logger.sh  migrate_workflows_to_manifest.py  package-code-for-architect.sh  package_macos_arm64_bundle.sh  scope-q.sh  scope.sh  sg-guards.sh  vendor-actions-schema.sh  view-logs.sh
scripts/agent/: agent-run.sh  agent-validate.sh
scripts/bundle/: AGENTS.md  README.md  doctor-macos.sh  install-macos.sh
test/manual/: README.md  (+2 more)
tusker/: .gitignore  CHEATSHEET.md  Dashboard.md  Docs.md  README.md  SKILL.md  WORKFLOW.md  architecture.md
workflows/: README.md
(+767 files in other folders)
