[package]
name = "rzn-browser"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
autobins = false

[[bin]]
name = "rzn-browser"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
rzn_core = { path = "../rzn_core" }
rzn_contracts = { path = "../rzn_contracts" }
rzn-broker-endpoint = { path = "../rzn_broker_endpoint" }
rzn_plan = { path = "../rzn_plan" }
rzn_sdk = { path = "../rzn_sdk" }
# rzn_session = { path = "../rzn_session" }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
interprocess = { version = "2.0", features = ["tokio"] }
log = "0.4"
env_logger = "0.10"
uuid = "1.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "std"] }
dirs = "5.0"
dotenvy = "0.15"

# Dependencies for Titanium CLI
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
colored = "2.0"
comfy-table = "7.2.2"
axum = { version = "0.7", features = ["json", "ws", "macros"] }
futures-util = "0.3"
terminal_size = "0.4.4"
url = "2.5"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

# Removed unused enhanced CLI dependencies

# Telemetry integration
# rzn_telemetry = { path = "../rzn_telemetry" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading"] }
