[package]
name = "rzn-browser-worker"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
rzn-broker-endpoint = { path = "../rzn_broker_endpoint" }

interprocess = { version = "2.0", features = ["tokio"] }
libc = "0.2"
dirs = "5.0"

tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "registry", "fmt", "json"] }
