[package]
name = "rzn_contracts"
version = "0.2.5"
edition = "2021"
description = "Versioned wire contracts for RZN Browser Native (Snapshot/Action/Result/Transcript)"
license = "AGPL-3.0-only"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
serde_json = "1.0"
