[package]
name = "rzn_plan"
version = "0.2.5"
edition = "2021"
description = "LLM-powered workflow planning and self-healing for Rzn Browser Bridge"
license = "AGPL-3.0-only"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.0"
ansi_term = "0.12"

# HTTP client for OpenAI API
reqwest = { version = "0.11", features = ["json", "stream"] }

# Async trait for LLM provider abstraction
async-trait = "0.1"

# Workflow management
serde_yaml = "0.9"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# HTML parsing and DOM analysis
scraper = "0.18"
html5ever = "0.26"
lol_html = "1.2"
regex = "1.0"

# Logging
log = "0.4"
tracing = "0.1"

# Compression for large payloads
flate2 = "1.0"
base64 = "0.21"
env_logger = "0.10"

# File system utilities
dirs = "5.0"

# IPC communication used by the planner/runtime stack
interprocess = { version = "2.0", features = ["tokio"] }

# Local dependencies
rzn_core = { path = "../rzn_core" }
# rzn_telemetry = { path = "../rzn_telemetry", optional = true }

# Optional: for advanced prompt engineering
tiktoken-rs = { version = "0.5", optional = true }

# Add dom_query dependency for better DOM manipulation
dom_query = "0.19"

# Regex already added above

# Retry logic with exponential backoff
tokio-retry = "0.3"

# URL parsing for iframe domain extraction
url = "2.5"

# Additional dependencies for Titanium architecture
lazy_static = "1.4"
sha1 = "0.10"

# CDP-based architecture dependencies
rand = "0.8"

[features]
default = []
token-counting = ["tiktoken-rs"]
# telemetry = ["rzn_telemetry"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
