[package]
name = "rzn_plugin_devkit"
version = "0.2.5"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.4", features = ["derive"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hex = "0.4"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
walkdir = "2.5"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
